tests/NormalTests/paczka1/fuzzy1/14035428.err
Error in line 2: SLHYovRP S479 84,4
Error in line 3: SLHYovRP S668 25,9
Error in line 24: OLr7 A240 59,2
Error in line 23: mm7qfmp A240 89,5
